...
            android:contentDescription="@string/movie_poster"
            android:src="@color/colorImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
...
            android:textColor="@color/colorTextSecondary"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvRuntimeLabel"
            app:layout_constraintStart_toEndOf="@+id/tvRuntimeLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
